deploy: 4326eb470a457b4f22373c0434c3f2c59dc496af

--- a/index.html
+++ b/index.html
@@ -463,6 +463,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_9_нормализация_группировки_joins">2.9. Lesson 9: Нормализация. Группировки. Joins</a></li>
 <li><a href="#_lesson_10_java_database_connectivity_jdbc">2.10. Lesson 10: Java Database Connectivity (JDBC)</a></li>
 <li><a href="#_lesson_11_data_access_object_dao">2.11. Lesson 11: Data Access Object (DAO)</a></li>
+<li><a href="#_lesson_12_intro_to_jpa">2.12. Lesson 12: Intro to JPA</a></li>
 </ul>
 </li>
 </ul>
@@ -1222,12 +1223,38 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_12_intro_to_jpa">2.12. Lesson 12: Intro to JPA</h3>
+<div class="sect3">
+<h4 id="_practice_12">2.12.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/04-intro-jpa/src/main/resources/intro-jpa.adoc">Intro to JPA</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_12">2.12.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Общее для Lessons 12-13.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-10 02:59:10 UTC
+Last updated 2022-01-10 17:46:09 UTC
 </div>
 </div>
 </body>
