--- a/lessons/index.html
+++ b/lessons/index.html
@@ -1076,10 +1076,38 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_12_intro_to_jpa">Lesson 12: Intro to JPA</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_12">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/04-intro-jpa/src/main/resources/intro-jpa.adoc">Intro to JPA</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_12">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+<li>
+<p>Общее для Lessons 12-13.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-10 02:59:10 UTC
+Last updated 2022-01-10 17:46:09 UTC
 </div>
 </div>
 </body>
