--- a/links.html
+++ b/links.html
@@ -562,6 +562,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/RauHxlrEo0Y" target="_blank" rel="noopener">Lesson 11: Data Access Object (DAO)</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/6ZjaO8hGiQA" target="_blank" rel="noopener">Lesson 12: Java Persistence API (JPA)</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -585,7 +588,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-10 17:46:09 UTC
+Last updated 2022-01-12 15:15:54 UTC
 </div>
 </div>
 </body>
