--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_project">3. Project</a>
 <ul class="sectlevel2">
 <li><a href="#_stage_00_инициализация_проекта">3.1. Stage 00: Инициализация проекта</a></li>
-<li><a href="#_stage_01_проработка_функционала_проекта">3.2. Stage 01: Проработка функционала проекта</a></li>
+<li><a href="#_stage_02_проработка_функционала_проекта">3.2. Stage 02: Проработка функционала проекта</a></li>
 <li><a href="#_themes_for_the_projects">3.3. Themes for the projects</a></li>
 </ul>
 </li>
@@ -1274,7 +1274,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Создать remote repository для проекта в <strong>Organisation</strong>: <a href="https://github.com/orgs/JD2-86/" class="bare">https://github.com/orgs/JD2-86/</a></p>
+<p>Создать remote repository для проекта в <strong>Organisation</strong>: <a href="https://github.com/orgs/JD2-86/" target="_blank" rel="noopener">JD2-86</a></p>
 </li>
 <li>
 <p>Добавить в проект файл <code>README.adoc</code>, который содержит описание проекта. Пример шаблона приведен ниже.</p>
@@ -1321,12 +1321,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect3">
 <h4 id="_example">3.1.2. Example</h4>
 <div class="paragraph">
-<p><a href="https://github.com/JD2-86/interview-helper" class="bare">https://github.com/JD2-86/interview-helper</a></p>
+<p><a href="https://github.com/JD2-86/interview-helper" target="_blank" rel="noopener">Interview Helper</a></p>
 </div>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_stage_01_проработка_функционала_проекта">3.2. Stage 01: Проработка функционала проекта</h3>
+<h3 id="_stage_02_проработка_функционала_проекта">3.2. Stage 02: Проработка функционала проекта</h3>
 <div class="paragraph">
 <p>На этом этапе прорабатывается функциональность, которую будет выполнять приложение. Нет никаких ограничений сверху по количеству функционала, но в то же самое время не стоит продумывать проект на месяцы разработки вперед.</p>
 </div>
@@ -1349,6 +1349,18 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="sect3">
 <h4 id="_tasks_2">3.2.1. Tasks</h4>
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<div class="title">Warning</div>
+</td>
+<td class="content">
+Все нижеописанное, лучше делать с помощью <strong>Mind Map</strong>. В качестве online-инструмента может выступать например: <a href="https://miro.com" class="bare">https://miro.com</a>
+</td>
+</tr>
+</table>
+</div>
 <div class="ulist">
 <ul>
 <li>
@@ -1396,7 +1408,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect3">
 <h4 id="_example_2">3.2.2. Example</h4>
 <div class="paragraph">
-<p><a href="https://miro.com/app/board/uXjVOY8hA_k=/?invite_link_id=177006962450" class="bare">https://miro.com/app/board/uXjVOY8hA_k=/?invite_link_id=177006962450</a></p>
+<p><a href="https://miro.com/app/board/uXjVOY8hA_k=/?invite_link_id=177006962450" target="_blank" rel="noopener">Mind Map</a></p>
 </div>
 </div>
 </div>
@@ -1799,7 +1811,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-12 15:18:51 UTC
+Last updated 2022-01-12 15:25:43 UTC
 </div>
 </div>
 </body>
