deploy: 5f03361a512dd03f3403c7c17f8e3bc1c7a9970e

--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_10_java_database_connectivity_jdbc">2.10. Lesson 10: Java Database Connectivity (JDBC)</a></li>
 <li><a href="#_lesson_11_data_access_object_dao">2.11. Lesson 11: Data Access Object (DAO)</a></li>
 <li><a href="#_lesson_12_intro_to_jpa">2.12. Lesson 12: Intro to JPA</a></li>
+<li><a href="#_lesson_13_intro_to_hibernate">2.13. Lesson 13: Intro to Hibernate</a></li>
 </ul>
 </li>
 <li><a href="#_project">3. Project</a>
@@ -1256,6 +1257,29 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_13_intro_to_hibernate">2.13. Lesson 13: Intro to Hibernate</h3>
+<div class="sect3">
+<h4 id="_practice_13">2.13.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/05-intro-hibernate/src/main/resources/intro-hibernate.adoc">Intro to Hibernate</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_13">2.13.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -1811,7 +1835,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-12 15:25:43 UTC
+Last updated 2022-01-12 17:14:13 UTC
 </div>
 </div>
 </body>
