deploy: efb6a438230675b7c504e91cb66d6341a670a07b

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#_project">3. Project</a>
 <ul class="sectlevel2">
-<li><a href="#_stage_00_инициализация_проекта">3.1. Stage 00: Инициализация проекта</a></li>
+<li><a href="#_stage_01_инициализация_проекта">3.1. Stage 01: Инициализация проекта</a></li>
 <li><a href="#_stage_02_проработка_функционала_проекта">3.2. Stage 02: Проработка функционала проекта</a></li>
 <li><a href="#_themes_for_the_projects">3.3. Themes for the projects</a></li>
 </ul>
@@ -1289,7 +1289,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Данный блок содержит шаги для поэтапной реализации 'Pet-project', что значительно упростит работу над проектом.</p>
 </div>
 <div class="sect2">
-<h3 id="_stage_00_инициализация_проекта">3.1. Stage 00: Инициализация проекта</h3>
+<h3 id="_stage_01_инициализация_проекта">3.1. Stage 01: Инициализация проекта</h3>
 <div class="paragraph">
 <p>На подготовительном этапе прорабатывается идея проекта и его особенности. После чего необходимо инициализировать git-repository для проекта.</p>
 </div>
@@ -1312,28 +1312,28 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 
 == Description
 
-==== Какою проблему данный проект решает или что нового приносит для пользователей?
+=== Какую проблему данный проект решает или что нового приносит для пользователей?
 
 * Пункт 1
 * Пункт 2
 * ...
 * Пункт N
 
-==== Потенциальные пользователи
+=== Потенциальные пользователи
 
 * Пункт 1
 * Пункт 2
 * ...
 * Пункт N
 
-==== Аналогичные приложения
+=== Аналогичные приложения
 
 * Пункт 1
 * Пункт 2
 * ...
 * Пункт N
 
-==== Конкурентное преимущество
+=== Конкурентное преимущество
 
 * Пункт 1
 * Пункт 2
@@ -1835,7 +1835,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-12 17:14:13 UTC
+Last updated 2022-01-13 03:32:14 UTC
 </div>
 </div>
 </body>
