--- a/project/index.html
+++ b/project/index.html
@@ -442,7 +442,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
-<li><a href="#_stage_00_инициализация_проекта">Stage 00: Инициализация проекта</a>
+<li><a href="#_stage_01_инициализация_проекта">Stage 01: Инициализация проекта</a>
 <ul class="sectlevel2">
 <li><a href="#_tasks">Tasks</a></li>
 <li><a href="#_example">Example</a></li>
@@ -483,7 +483,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect1">
-<h2 id="_stage_00_инициализация_проекта">Stage 00: Инициализация проекта</h2>
+<h2 id="_stage_01_инициализация_проекта">Stage 01: Инициализация проекта</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>На подготовительном этапе прорабатывается идея проекта и его особенности. После чего необходимо инициализировать git-repository для проекта.</p>
@@ -507,28 +507,28 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 
 == Description
 
-==== Какою проблему данный проект решает или что нового приносит для пользователей?
+=== Какую проблему данный проект решает или что нового приносит для пользователей?
 
 * Пункт 1
 * Пункт 2
 * ...
 * Пункт N
 
-==== Потенциальные пользователи
+=== Потенциальные пользователи
 
 * Пункт 1
 * Пункт 2
 * ...
 * Пункт N
 
-==== Аналогичные приложения
+=== Аналогичные приложения
 
 * Пункт 1
 * Пункт 2
 * ...
 * Пункт N
 
-==== Конкурентное преимущество
+=== Конкурентное преимущество
 
 * Пункт 1
 * Пункт 2
@@ -1033,7 +1033,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-12 17:14:13 UTC
+Last updated 2022-01-13 03:32:14 UTC
 </div>
 </div>
 </body>
