--- a/project/index.html
+++ b/project/index.html
@@ -577,7 +577,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="title">Warning</div>
 </td>
 <td class="content">
-Все нижеописанное, лучше делать с помощью <strong>Mind Map</strong>. В качестве online-инструмента может выступать например: <a href="https://miro.com" class="bare">https://miro.com</a>
+Все нижеописанное, удобнее (на данном этапе) реализовывать с помощью <strong>Mind Map</strong>. В качестве online-инструмента может выступать например: <a href="https://miro.com" class="bare">https://miro.com</a>
 </td>
 </tr>
 </table>
@@ -597,7 +597,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Сформулировать для этого <strong>EPIC</strong> <strong>User Stories</strong>, т.е. произвести декомпозицию глобальной задачи в пользовательский функционал. <strong>User Story</strong> должны соответствовать шаблону:</p>
+<p>Сформулировать для этого <strong>EPIC</strong> пользовательские истории (<strong>User Stories</strong>), т.е. произвести декомпозицию глобальной задачи в пользовательский функционал. <strong>User Story</strong> должны соответствовать шаблону:</p>
 <div class="literalblock">
 <div class="content">
 <pre>КАК ${ROLE} ХОЧУ ${FUNCTIONALITY} ПОТОМУ ЧТО ${PROFIT}</pre>
@@ -618,10 +618,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </li>
 <li>
-<p>Выделить <strong>Roles</strong> возникшие в процессе формирования <strong>User Story</strong></p>
+<p>Выделить <strong>ROLES</strong> возникшие в процессе формирования <strong>User Story</strong>.</p>
 </li>
 <li>
 <p>Выделить еще несколько <strong>EPICS</strong> для будущей декомпозиции.</p>
+</li>
+<li>
+<p>Добавить ссылку на проработанную функциональность.</p>
 </li>
 </ul>
 </div>
@@ -1033,7 +1036,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-13 03:32:14 UTC
+Last updated 2022-01-13 03:50:25 UTC
 </div>
 </div>
 </body>
